--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 </head>
 
 <body>
-
+    <div class="calculator">
+        <div class="output">
+            <div class="output__previous-operand">123 +</div>
+            <div class="output__current-operand">456</div>
+        </div>
+        <button>%</button>
+        <button>+/-</button>
+        <button>C</button>
+        <button class="purple">/</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="purple">x</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="purple">-</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="purple">+</button>
+        <button>0</button>
+        <button>,</button>
+        <button class="equal">=</button>
+    </div>
 </body>
 
 </html>
