--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/styles.min.css">
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js/main.js" defer></script>
 </head>
 
 <body>
     <div class="calculator">
         <div class="output">
-            <div class="output__previous-operand">123 +</div>
-            <div class="output__current-operand">456</div>
+            <div data-previous-operand class="output__previous-operand"></div>
+            <div data-current-operand class="output__current-operand"></div>
         </div>
-        <button>%</button>
-        <button>+/-</button>
-        <button>C</button>
-        <button class="purple">/</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="purple">x</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="purple">-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="purple">+</button>
-        <button>0</button>
-        <button>,</button>
-        <button class="equal">=</button>
+        <button data-operation>%</button>
+        <button data-operation>+/-</button>
+        <button data-clear>C</button>
+        <button data-operation class="purple">/</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation class="purple">x</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation class="purple">-</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation class="purple">+</button>
+        <button data-number>0</button>
+        <button data-number>,</button>
+        <button data-equals class="equal">=</button>
     </div>
 </body>
 
