--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/styles.min.css">
-    <script src="js/main.js/main.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
