--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+
     <link rel="stylesheet" href="css/styles.min.css">
-    <script src="js/main.js" defer></script>
+
+    <title>Calculator</title>
 </head>
 
 <body>
@@ -35,6 +36,8 @@
         <button data-number>,</button>
         <button data-equals class="equal">=</button>
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
